# srt-rs

./: Cargo.toml
examples/: client.rs  server.rs
libsrt-sys/: Cargo.toml  build.rs
libsrt-sys/examples/: client.rs  server.rs
